<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sphpc</string>
    <string name="our_branch">2015 by HPC Team</string>
    <string name="action_settings">Settings</string>
    <string name="main_page_line1">Modelisation</string>
    <string name="main_page_line2">Simulation</string>
    <string name="main_page_line3">Account</string>
    <string name="main_page_line4">Help and Tips</string>
    <string name="main_page_line5">About</string>
    <string name="title_activity_modelisation">Modelisation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_simulation">Simulation</string>
    <string name="title_activity_account_management">AccountManagement</string>
    <string name="title_activity_help_and_tips">HelpAndTips</string>
    <string name="title_activity_about">About</string>
    <string name="stock_hint_text">Company Stock Symbol</string>
    <string name="app_title">Stock Monster</string>

    <!-- for simulation test-->
    <string name="yahoo_stock_url">http://finance.yahoo.com/q?s=</string>
    <string name="stock_company_name">Company Name:</string>
    <string name="stock_year_low">Year Low:</string>
    <string name="stock_year_high">Year High:</string>
    <string name="stock_days_low">Days Low:</string>
    <string name="stock_days_high">Days High:</string>
    <string name="title_activity_stock_info">StockInfoActivity:</string>
    <string name="last_trade_price_only">Last Price:</string>
    <string name="change">Change:</string>
    <string name="days_range">Daily Price Range:</string>
    <!-- end of simulation test-->
</resources>
