<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="#669744"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:padding="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/imageView"
            android:src="@drawable/model"
            android:onClick="modelizationClicked"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/imageView2"
            android:src="@drawable/simulation"
            android:onClick="simulationClicked"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#ffffff">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_page_line1"
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_page_line2"
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/account"
            android:layout_weight="1"
            android:onClick="accountClicked"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/help"
            android:layout_weight="1"
            android:onClick="helpClicked"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_page_line3"
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_page_line4"
            android:id="@+id/textView5"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_weight="1.5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/information"
            android:layout_gravity="center_horizontal"
            android:onClick="informationClicked"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_page_line5"
            android:id="@+id/textView6"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>